# Customer-Churn-Prediction

prediction_model/: .gitignore  demo.py  docker-compose.yml  main.py  pyproject.toml
prediction_model/classifier/src/: callbacks.py  config.py  data_utils.py  pipeline.py  preprocessing.py  train.py
prediction_model/classifier/src/models/: churn_net.py
prediction_model/classifiers/: __init__.py  churn_classifier.py
prediction_model/config/: config.dev.yaml
prediction_model/data_pipeline/: create_dataloaders.py  create_dataset.py  data_ingesion.py  data_ingestion.py  data_preprocessing.py  pipeline.py
prediction_model/db_conn/: db_manager.py  get_session.py  models.py
prediction_model/experiment/: e1.ipynb  e2.ipynb  e3.ipynb  e4.ipynb  e5.ipynb
prediction_model/tests/test_data_pipeline/: test_data_ingestion.py
prediction_model/utils/: __init__.py  handle_config.py  handle_exception.py  handle_logging.py
ui/: package-lock.json
