[project]
name = "prediction-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "ipykernel>=7.3.0",
    "mlflow>=3.14.0",
    "pandas>=2.3.3",
    "tensorboard>=2.20.0",
    "torch>=2.12.1",
]
